--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,5 +1,5 @@
 ﻿<!doctype html>
-<html class="no-js" lang="zxx">
+<html class="no-js" lang="zxx" xmlns:th="http://www.thymeleaf.org">
 <head>
 
     <meta charset="utf-8">
@@ -217,32 +217,41 @@
                         <h2>Register Here</h2>
                         <p>Already have an account ? <a href="login.html">Login Here</a></p>
 
-                        <form class="form" method="post" action="/patient/register" enctype="multipart/form-data">
+                        <form class="form" method="post" action="/patient/register" enctype="multipart/form-data" th:object="${patient}">
                             <div class="row">
                                 <div class="col-lg-6">
                                     <div class="form-group">
                                         <input type="text" name="name" placeholder="First Name" required="">
+                                        <p style="color: red;" th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></p>
                                     </div>
                                 </div>
                                 <div class="col-lg-6">
                                     <div class="form-group">
                                         <input type="text" name="surname" placeholder="Last Name" required="">
+                                        <p style="color: red;" th:if="${#fields.hasErrors('surname')}" th:errors="*{surname}"></p>
+
                                     </div>
                                 </div>
 
                                 <div class="col-lg-6">
                                     <div class="form-group">
                                         <input type="text" name="email" placeholder="Email" required="">
+                                        <p style="color: red;" th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></p>
+
                                     </div>
                                 </div>
                                 <div class="col-lg-6">
                                     <div class="form-group">
                                         <input type="password" name="password" placeholder="Password" required="">
+                                        <p style="color: red;" th:if="${#fields.hasErrors('name')}" th:errors="*{password}"></p>
+
                                     </div>
                                 </div>
                                 <div class="col-lg-6">
                                     <div class="form-group">
                                         <input type="date" name="birthDate" placeholder="Birthday" required="">
+                                        <p style="color: red;" th:if="${#fields.hasErrors('birthDate')}" th:errors="*{birthDate}"></p>
+
                                     </div>
                                 </div>
                                 <div class="col-lg-6">
@@ -262,7 +271,7 @@
                                 </div>
                                 <div class="col-lg-6">
                                     <div class="form-group">
-                                        <input type="file" name="image" placeholder="image" required="">
+                                        <input type="file" name="image" placeholder="image" >
                                     </div>
                                 </div>
                                 <div class="col-12">
