--- a/src/main/resources/templates/updateDoctor.html
+++ b/src/main/resources/templates/updateDoctor.html
@@ -1,25 +1,4 @@
-<!--<!DOCTYPE html>-->
-<!--<html lang="en">-->
-<!--<head>-->
-<!--    <meta charset="UTF-8">-->
-<!--    <title>Update Doctor</title>-->
-<!--</head>-->
-<!--<body>-->
-<!--<form action="/doctor/update" method="post" enctype="multipart/form-data">-->
-<!--    <input type="hidden" name="id" th:value="${doctor.getId()}"><br>-->
-<!--    Name: <input type="text" name="name" th:placeholder="${doctor.name}"><br>-->
-<!--    Surname: <input type="text" name="surname" th:placeholder="${doctor.surname}"><br>-->
-<!--    Email: <input type="text" name="email" th:placeholder="${doctor.email}"/><br>-->
-<!--    Password: <input type="text" name="password" ><br>-->
-<!--    Birth date: <input type="date" name="birthDate" th:placeholder="${doctor.birthDate}"><br>-->
-<!--    Speciality: <input type="text" name="speciality" th:placeholder="${doctor.speciality}"><br>-->
-<!--    Phone numb: <input type="text" name="phoneNumber" th:placeholder="${doctor.phoneNumber}"><br>-->
-<!--    Picture: <input type="file" name="image"><br>-->
 
-<!--    <input type="submit" value="update">-->
-<!--</form>-->
-<!--</body>-->
-<!--</html>-->
 <!doctype html>
 <html class="no-js" lang="zxx">
 <head>
@@ -148,38 +127,44 @@
                     <div class="register-form">
                         <h2>Update Doctor</h2>
                         <p>Already have an account ? <a href="/customLogin">Login Here</a></p>
-                        <form action="/doctor/update" method="post" enctype="multipart/form-data">
+                        <form action="/doctor/update" method="post" enctype="multipart/form-data" th:object="${doctor}">
                             <div class="row">
                                 <input type="hidden" name="id" th:value="${doctor.getId()}"><br>
                                 <div class="col-lg-6">
                                     <div class="form-group">
                                         <input type="text" name="name" th:placeholder="${doctor.name}" required="">
+                                        <p style="color: red;" th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></p>
                                     </div>
                                 </div>
                                 <div class="col-lg-6">
                                     <div class="form-group">
                                         <input type="text" name="surname"th:placeholder="${doctor.surname}" required="">
+                                        <p style="color: red;" th:if="${#fields.hasErrors('surname')}" th:errors="*{surname}"></p>
                                     </div>
                                 </div>
 
                                 <div class="col-lg-6">
                                     <div class="form-group">
                                         <input type="text" name="email" th:placeholder="${doctor.email}" required="">
+                                        <p style="color: red;" th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></p>
                                     </div>
                                 </div>
                                 <div class="col-lg-6">
                                     <div class="form-group">
                                         <input type="password" name="password" placeholder=" New Password" required="">
+                                        <p style="color: red;" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></p>
                                     </div>
                                 </div>
                                 <div class="col-lg-6">
                                     <div class="form-group">
                                         <input type="date" name="birthDate" th:placeholder="${doctor.birthDate}" required="">
+                                        <p style="color: red;" th:if="${#fields.hasErrors('birthDate')}" th:errors="*{birthDate}"></p>
                                     </div>
                                 </div>
                                 <div class="col-lg-6">
                                     <div class="form-group">
                                         <input type="text" name="speciality" th:placeholder="${doctor.speciality}" required="">
+                                        <p style="color: red;" th:if="${#fields.hasErrors('speciality')}" th:errors="*{speciality}"></p>
                                     </div>
                                 </div>
                                 <div class="col-lg-6">
