--- a/src/main/resources/templates/createMedicalService.html
+++ b/src/main/resources/templates/createMedicalService.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html class="no-js" lang="zxx">
 <head>
@@ -77,15 +76,124 @@
     <span class="color11"></span>
     <span class="color12"></span>
 </div>
+
+
+<header class="header">
+
+    <div class="topbar">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6 col-md-5 col-12">
+
+                    <ul class="top-link">
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Doctors</a></li>
+                        <li><a href="#">Contact</a></li>
+                        <li><a href="#">FAQ</a></li>
+                    </ul>
+
+                </div>
+                <div class="col-lg-6 col-md-7 col-12">
+
+                    <ul class="top-contact">
+                        <li><i class="fa fa-phone"></i>+880 1234 56789</li>
+                        <li><i class="fa fa-envelope"></i><a
+                                href="/js/cdn-cgi/l/email-protection#6e1d1b1e1e011c1a2e17011b1c030f0702400d0103"><span
+                                class="__cf_email__" data-cfemail="9cefe9ececf3eee8dce5f3e9eef1fdf5f0b2fff3f1">[email&#160;protected]</span></a>
+                        </li>
+                    </ul>
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <div class="header-inner">
+        <div class="container">
+            <div class="inner">
+                <div class="row">
+                    <div class="col-lg-3 col-md-3 col-12">
+
+                        <div class="logo">
+                            <a href="index.html"><img src="/img/logo.png" alt="#"></a>
+                        </div>
+
+
+                        <div class="mobile-nav"></div>
+
+                    </div>
+                    <div class="col-lg-7 col-md-9 col-12">
+
+                        <div class="main-menu">
+                            <nav class="navigation">
+                                <ul class="nav menu">
+                                    <li class="active"><a href="#">Home <i class="icofont-rounded-down"></i></a>
+                                        <ul class="dropdown">
+                                            <li><a href="index.html">Default Homepage</a></li>
+                                            <li><a href="index2.html">Animation Homepage</a></li>
+                                        </ul>
+                                    </li>
+                                    <li><a href="#">Doctos <i class="icofont-rounded-down"></i></a>
+                                        <ul class="dropdown">
+                                            <li><a href="doctors.html">Doctor</a></li>
+                                            <li><a href="doctor-details.html">Doctor Details</a></li>
+                                        </ul>
+                                    </li>
+                                    <li><a href="#">Services <i class="icofont-rounded-down"></i></a>
+                                        <ul class="dropdown">
+                                            <li><a href="service.html">Service</a></li>
+                                            <li><a href="service-details.html">Service Details</a></li>
+                                        </ul>
+                                    </li>
+                                    <li><a href="#">Pages <i class="icofont-rounded-down"></i></a>
+                                        <ul class="dropdown">
+                                            <li><a href="about.html">About Us</a></li>
+                                            <li><a href="appointment.html">Appointment</a></li>
+                                            <li><a href="time-table.html">Time Table</a></li>
+                                            <li><a href="testimonials.html">Testimonials</a></li>
+                                            <li><a href="pricing.html">Our Pricing</a></li>
+                                            <li><a href="register.html">Sign Up</a></li>
+                                            <li><a href="login.html">Login</a></li>
+                                            <li><a href="faq.html">Faq</a></li>
+                                            <li><a href="mail-success.html">Mail Success</a></li>
+                                            <li><a href="404.html">404 Error</a></li>
+                                        </ul>
+                                    </li>
+                                    <li><a href="#">Blogs <i class="icofont-rounded-down"></i></a>
+                                        <ul class="dropdown">
+                                            <li><a href="blog-grid.html">Blog Grid</a></li>
+                                            <li><a href="blog-single.html">Blog Details</a></li>
+                                        </ul>
+                                    </li>
+                                    <li><a href="contact.html">Contact Us</a></li>
+                                </ul>
+                            </nav>
+                        </div>
+
+                    </div>
+                    <div class="col-lg-2 col-12">
+                        <div class="get-quote">
+                            <a href="appointment.html" class="btn">Appointment</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+</header>
+
+
 <div class="breadcrumbs overlay">
     <div class="container">
         <div class="bread-inner">
             <div class="row">
                 <div class="col-12">
-                    <h2>Doctors</h2>
+                    <h2>Add Service</h2>
                     <ul class="bread-list">
                         <li><i class="icofont-simple-right"></i></li>
-                        <li class="active">Doctors</li>
+                        <li class="active">Add Service</li>
                     </ul>
                 </div>
             </div>
@@ -94,95 +202,40 @@
 </div>
 
 
-<section class="doctor-calendar-area section">
+<section class="login section">
     <div class="container">
-        <div class="row">
-            <div class="col-lg-12">
-                <div class="section-title">
-                    <h2>Our Doctors</h2>
-                    <img src="/img/section-img.png" alt="#">
-                    <p>Lorem ipsum dolor sit amet consectetur adipiscing elit praesent aliquet. pretiumts</p>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-12">
-                <div class="doctor-calendar-table table-responsive">
-                    <table class="table">
-                        <thead>
-                        <tr>
-                            <th>picture</th>
-                            <th>id</th>
-                            <th>name</th>
-                            <th>surname</th>
-                            <th>speciality</th>
-                            <th>email</th>
-                            <th>Update</th>
-                            <th>Delete</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        <tr th:each="doctor: ${doctors}">
-                            <td>
-                                <img th:if="${doctor.picName != null}"
-                                     th:src="@{/getImage(imageName=${doctor.getPicName()})}" width="100"/>
-                                <img th:if="${doctor.picName == null or doctor.picName.equalsIgnoreCase('null')}"
-                                     th:src="@{/img.png}"
-                                     width="100">
-                            </td>
-                            <td>
-                                <h3 th:text="${doctor.id}"></h3>
-                            </td>
-                            <td>
-                                <h3 th:text="${doctor.name}"></h3>
-                            </td>
-                            <td>
-                                <h3 th:text="${doctor.surname}"></h3>
-
-                            </td>
-                            <td>
-                                <h3 th:text="${doctor.speciality}"></h3>
-
-                            </td>
-                            <td>
-                                <h3 th:text="${doctor.email}"></h3>
-
-                            </td>
-                            <td>
-                                <a th:href="@{/doctor/update(id = ${doctor.id})}"><h3>Update</h3></a>
-
-                            </td>
-                            <td>
-                                <a th:href="@{/doctor/remove(id = ${doctor.id})}"><h3>Remove</h3></a>
-
-                            </td>
-                        </tr>
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-
-
-<section class="newsletter section">
-    <div class="container">
-        <div class="row ">
-            <div class="col-lg-6  col-12">
-
-                <div class="subscribe-text ">
-                    <h6>Sign up for newsletter</h6>
-                    <p class="">Cu qui soleat partiendo urbanitas. Eum aperiri indoctum eu,<br> homero alterum.</p>
+        <div class="inner">
+            <div class="row">
+                <div class="col-lg-6">
+                    <div class="login-left">
+                    </div>
                 </div>
 
-            </div>
-            <div class="col-lg-6  col-12">
+                <div style="margin-right: 150px" class="col-lg-6">
+                    <div class="login-form">
+                        <h2>Add Service</h2>
+                        <form class="form" method="post" action="/medicalServices/create">
+                            <div class="row">
+                                <div class="col-lg-6">
+                                    <div class="form-group">
+                                        <input type="text" name="name" placeholder="Service Name">
+                                    </div>
+                                </div>
+                                <div class="col-lg-6">
+                                    <div class="form-group">
+                                        <input type="number" name="price" placeholder="Price">
+                                    </div>
+                                </div>
+                                <div class="col-12">
 
-                <div class="subscribe-form ">
-                        <a th:href="@{/doctor/add}" class="btn">Register Doctor</a>
+                                    <div class="form-group login-btn">
+                                        <button class="btn" type="submit">Add Service</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
                 </div>
-
             </div>
         </div>
     </div>
@@ -329,7 +382,7 @@
 <script src="/js/main.js"></script>
 <script defer="" src="/js/beacon.min.js/v52afc6f149f6479b8c77fa569edb01181681764108816"
         integrity="sha512-jGCTpDpBAYDGNYR5ztKt4BQPGef1P0giN6ZGVUi835kFF88FOmmn8jBQWNgrNd8g/Yu421NdgWhwQoaOPFflDw=="
-        data-cf-beacon='{"rayId":"7d055780f9e43362","version":"2023.4.0","r":1,"b":1,"token":"3248e93e0d6447329c4d6bcc351d5700","si":100}'
+        data-cf-beacon='{"rayId":"7d055790fe8d3362","version":"2023.4.0","r":1,"b":1,"token":"3248e93e0d6447329c4d6bcc351d5700","si":100}'
         crossorigin="anonymous"></script>
 </body>
 </html>
