--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,10 +13,10 @@
     <title>Medikit - Medical and Doctor HTML Template.</title>
 
     <link rel="icon" href="/img/favicon.png">
-    <link rel="stylesheet" href="../../bootstrap/4.5.2/css/bootstrap.min.css"
+    <link rel="stylesheet" href="/js/bootstrap/4.5.2/css/bootstrap.min.css"
           integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
-    <link href="../../css?family=Poppins:200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap"
+    <link href="/css?family=Poppins:200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap"
           rel="stylesheet">
 
     <link rel="stylesheet" href="/css/bootstrap.min.css">
@@ -155,7 +155,7 @@
                                             <li><a href="appointment.html">Appointment</a></li>
                                             <li><a href="time-table.html">Time Table</a></li>
                                             <li><a href="testimonials.html">Testimonials</a></li>
-                                            <li><a href="pricing.html">Our Pricing</a></li>
+                                            <li><a href="/medicalServices">Our Pricing</a></li>
                                             <li><a href="/patient/register">Sign Up</a></li>
                                             <li><a href="/customLogin">Login</a></li>
                                             <li><a href="faq.html">Faq</a></li>
