--- a/src/main/resources/templates/updateDoctor.html
+++ b/src/main/resources/templates/updateDoctor.html
@@ -177,6 +177,12 @@
                                         <input type="file" name="image" placeholder="Select new Image" required="">
                                     </div>
                                 </div>
+                                <div class="col-lg-6 col-md-6 col-12">
+                                    Department: <select name="department.id">
+                                    <option th:each="department: ${departments}"
+                                            th:text="${department.getDepartments()}" th:value="${department.id}"></option>
+                                </select>
+                                </div>
                                 <div class="col-12">
                                     <div class="form-group login-btn">
                                         <button class="btn" type="submit">Update Doctor</button>
