--- a/src/main/resources/templates/doctors.html
+++ b/src/main/resources/templates/doctors.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html class="no-js" lang="zxx">
 <head>
@@ -28,21 +27,26 @@
     <link rel="stylesheet" href="/css/slicknav.min.css">
 
     <link rel="stylesheet" href="/css/owl-carousel.css">
-
     <link rel="stylesheet" href="/css/datepicker.css">
-
     <link rel="stylesheet" href="/css/animate.min.css">
-
     <link rel="stylesheet" href="/css/magnific-popup.css">
-
     <link rel="stylesheet" href="/css/normalize.css">
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/responsive.css">
-
     <link rel="stylesheet" href="/css/color/color1.css">
-
-
     <link rel="stylesheet" href="#" id="colors">
+
+    <style>
+        .active {
+            color: red;
+            font-size: 20px;
+        }
+
+        .pagination {
+            display: flex;
+            flex-direction: row;
+        }
+    </style>
 </head>
 <body>
 
@@ -122,7 +126,7 @@
                         </tr>
                         </thead>
                         <tbody>
-                        <tr th:each="doctor: ${doctors}">
+                        <tr th:each="doctor: ${doctors.content}">
                             <td>
                                 <img th:if="${doctor.picName != null}"
                                      th:src="@{/getImage(imageName=${doctor.getPicName()})}" width="100"/>
@@ -159,6 +163,14 @@
                         </tr>
                         </tbody>
                     </table>
+                    <div class="pagination">
+                        <div th:if="${doctors.totalPages> 0}"
+                             th:each="pageNumber : ${pageNumbers}">
+                            <a th:href="@{/doctor(size=${doctors.size}, page=${pageNumber})}"
+                               th:text="${pageNumber}"
+                               th:class="${pageNumber==doctors.number + 1} ? active"></a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -180,7 +192,7 @@
             <div class="col-lg-6  col-12">
 
                 <div class="subscribe-form ">
-                        <a th:href="@{/doctor/add}" class="btn">Register Doctor</a>
+                    <a th:href="@{/doctor/add}" class="btn">Register Doctor</a>
                 </div>
 
             </div>
